Fixed letter-spacing for Report Id

--- a/irp/src/main/webapp/Shared/irt.css
+++ b/irp/src/main/webapp/Shared/irt.css
@@ -332,7 +332,7 @@
 	font-weight: bold;
 	font-size: 2.5em;
 	font-family: Arial, Helvetica, sans-serif;
-	letter-spacing: -.05em;
+	letter-spacing: .05em;
 	font-style: normal;
 	color: #008AB1;
 	width: 40%;
